[project]
name = "diconerf"
description = "DiCo-Nerf repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["diconerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
diconerf = 'diconerf.diconerf_config:diconerf'
